# plex-bridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  publish.yml
migrations/postgres/: 20240001_initial.sql
migrations/sqlite/: 20240001_initial.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/models/: config.rs  mod.rs  sync_job.rs
src/plex/: client.rs  types.rs
src/routes/: browse.rs  dashboard.rs  events.rs  mod.rs  queue.rs  settings.rs
src/sync/: engine.rs  mod.rs  worker.rs
templates/: base.html  browse.html  index.html  settings.html
templates/partials/: movie_grid.html  progress_row.html  queue_list.html  queue_stats.html  season_episodes.html  show_list.html
