[package]
name = "plexbridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plexbridge"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "macros"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
async-stream = "0.3"
